	* Ability to be invisible on AIM
	* Chatroom list support (Tim Ringenbach)
	* Added auto-completion for screen names to the New Instant Message and
	  Get User Info dialogs.
	* Non-ascii character support in AIM chats (Uli Luckas and Marco Ziech)
	* Vastly improved browser opening, with tab support! (Nathan Fredrickson)
	* Added support for connecting to MSN using the port 80 method.
	* Support for Mozilla Firefox (Chris Friesen and Nathan Fredrickson)
	* Added protocol-specific preferences (Gary Kramlich)
	* Local IP address information can be changed in Preferences
	  (Tim Ringenbach)
	* Improved local IP address detection (Tim Ringenbach)
	* Offline accounts in account drop-down lists are now greyed (Etan Reisner)
	* Improved accessibility support for screen readers and other
	  accessibility tools (Marc Mulcahy)
	* Improved accessibility in conversation windows (Nathan Fredrickson)
	* Keyboard access to context menus via Shift+F10 (Marc Mulcahy)
	* Core/UI split event loop code. (Scott Lamb)
	* Added improvements to the multi-field request code, including
	  required fields and account fields.
	* Moved more dialogs to the request API for interface consistency
	  (Send Message, Get User Info, and Insert Link dialogs)
	* Jabber file transfer
	* IRC file transfer (Tim Ringenbach)
	* Moved translation news to po/ChangeLog

	Bug Fixes:
	* You can now use :/ as a smiley safely (Nathan Owens)
	* Various buffer overflow fixes (Stefan Esser)
	* Tabs now stay green when they are supposed to (Etan Reisner)
	* Fixed a bug where only the first user in a chat room list was removed
	  sometimes when trying to remove a group of users (Tim Ringenbach)
	* Clearing an AIM buddy icon actually removes it from the server,
	  icons changes in the account editor do not take effect if the
	  cancel button is used (Stu Tomlinson)
	* Improved chat parting logic (Tim Ringenbach)
	* Yet Another IRC channel user duplication bugfix (Tim Ringenbach)