@@ -10,6 +10,7 @@ version 0.76cvs:
 	* Non-ascii character support in AIM chats (Uli Luckas and Marco Ziech)
 	* Vastly improved browser opening, with tab support! (Nathan Fredrickson)
 	* Added support for connecting to MSN using the port 80 method.
+	* Added outgoing MSN formatting support (David Vermeille)
 	* Support for Mozilla Firefox (Chris Friesen and Nathan Fredrickson)
 	* Added protocol-specific preferences (Gary Kramlich)
 	* Local IP address information can be changed in Preferences
@@ -51,6 +52,8 @@ version 0.76cvs:
 	* Removing invalid buddies in MSN with a space in their name no longer
 	  causes a disconnect (Stu Tomlinson)
 	* Multiple MSN chats should now work (Robert Mibus)
+	* Added new MSN error codes and fixed an incorrect one (Stu Tomlinson)
+	* Incoming colors are now processed correctly in MSN.
 	* Conversation placement by account now works correctly with both
 	  chats and IMs, and takes the Combine Chats and IMs option into
 	  consideration.
@@ -58,7 +61,6 @@ version 0.76cvs:
 	  so they work without a label and scrollbar (Pekka Riikonen)
 	* The Disconnect dialog no longer raises and gains focus each time
 	  a disconnected account is added (Ka-Hing Cheung)
-	* Added new MSN error codes and fixed an incorrect one (Stu Tomlinson)
 	* Gadu-Gadu might actually connect again (Ignacy Gawedzki)
 	* Buddy pounces for an account are removed when the account is
 	  deleted (Gary Kramlich)
